k8s/apps/kube-oidc-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-oidc-proxy
  namespace: kube-oidc-proxy
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: kube-oidc-proxy
  type: ClusterIP
