k8s/apps/kube-oidc-proxy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-oidc-proxy
  namespace: kube-oidc-proxy
spec:
  hostnames:
    - kurumi-oidc-proxy.local.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: kube-oidc-proxy
          port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
