k8s/apps/kube-oidc-proxy/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kube-oidc-proxy
  namespace: kube-oidc-proxy
spec:
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 192.168.0.0/16
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kube-oidc-proxy
