k8s/apps/kube-oidc-proxy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-oidc-proxy
  namespace: kube-oidc-proxy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
      ports:
        - port: 8443
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kube-oidc-proxy
  policyTypes:
    - Ingress
